--- a/site/_assets/css/main.scss
+++ b/site/_assets/css/main.scss
@@ -1,4 +1,5 @@
 //= require furtive/css/furtive
+//= require monokai
 
 @font-face {
   font-family: 'Monkey Island 1990';
@@ -40,4 +41,9 @@ nav {
       display: inline
     }
   }
+}
+
+code.highlighter-rouge {
+  background-color: yellow;
+  color: black;
 }
