--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -27,7 +27,8 @@
     <nav>
       <ul>
         <li><a href="/">{% t home %}</a></li>
-        <li><a href="https://releases.mailbox.sexy">{% t download %}</a></li>
+        <li><a href="/presentation.html">{% t presentation %}</a></li>
+        <li><a href="https://github.com/mailboxsexy/mailbox.sexy/releases">{% t download %}</a></li>
         <li><a href="{{current_lang_url}}/spec">spec</a></li>
         <li><a href="{{current_lang_url}}/why">{% t why %}</a></li>
       </ul>
